# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/dtos/output/ImageDownloadListOutputDto.kt
@@ -1,3 +1,6 @@
 package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output
 
-data class ImageDownloadListOutputDto(val downloads: List<ImageDownloadOutputDto>)
+data class ImageDownloadListOutputDto(
+    val downloads: List<ImageDownloadOutputDto>,
+    val pagination: PaginationOutputDto,
+)
