# api/api-presentation-quarkus/src/main/kotlin/fr/geoffreyCoulaud/pinryReborn/api/presentation/quarkus/mappers/ImageDownloadDtoMapper.kt
@@ -1,8 +1,11 @@
 package fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.mappers
 
 import fr.geoffreyCoulaud.pinryReborn.api.domain.entities.ImageDownload
+import fr.geoffreyCoulaud.pinryReborn.api.domain.entities.Page
 import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output.ImageDownloadListOutputDto
 import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output.ImageDownloadOutputDto
+import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.dtos.output.PaginationOutputDto
+import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.mappers.CursorMapper.toDto
 import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.mappers.PinImageStateMapper.messageFor
 import fr.geoffreyCoulaud.pinryReborn.api.presentation.quarkus.mappers.PinImageStateMapper.toDto
 
@@ -17,5 +20,11 @@ object ImageDownloadDtoMapper {
         message = reasonCode?.let { messageFor(it) },
     )
 
-    fun List<ImageDownload>.toDto() = ImageDownloadListOutputDto(downloads = map { it.toDto() })
+    fun Page<ImageDownload>.toDto() = ImageDownloadListOutputDto(
+        downloads = items.map { it.toDto() },
+        pagination = PaginationOutputDto(
+            previousCursor = previousCursor?.toDto(),
+            nextCursor = nextCursor?.toDto(),
+        ),
+    )
 }
